--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,4 +1,5 @@
 .header {
+  position: relative;
 
   @include onTablet {
     display: flex;
@@ -26,7 +27,7 @@
       }
 
       @include onDesktop {
-        --burgerWidth: 45%;
+        --burgerWidth: 55%;
 
         margin-left: 58px;
       }
@@ -43,7 +44,7 @@
       }
 
       @include onDesktop {
-        width: 55%;
+        width: 45%;
       }
     }
 
@@ -88,6 +89,7 @@
 
   &__nav {
     width: 100%;
+
     &--content {
       font-family: "Montserrat", sans-serif;
       font-style: normal;
@@ -122,6 +124,7 @@
   &__button {
     margin-bottom: 70px;
     margin-left: 20px;
+    position: relative;
 
     @include onTablet {
       margin-bottom: 0;
@@ -156,6 +159,7 @@
     }
 
     &--real-button {
+      position: absolute;
       display: inline-block;
       width: 15%;
       height: 50px;
@@ -173,7 +177,7 @@
     transform: rotate(-90deg);
 
     margin-top: 55px;
-    bottom: -124px;
+    bottom: 340px;
 
     display: none;
 
@@ -190,7 +194,6 @@
       color: $colorBlack;
       text-transform: uppercase;
       text-decoration: none;
-      position: relative;
 
       &::before {
         display: block;
