--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -68,6 +68,12 @@
     line-height: 150%;
     text-decoration: none;
     color: #0f0e08;
+    border-bottom: 1px solid transparent;
+    transition: border-color 0.3s;
+
+    &:hover {
+      border-color: #0f0e08;
+    }
 
   }
   &__text {
