--- a/src/styles/blocks/namu.scss
+++ b/src/styles/blocks/namu.scss
@@ -10,6 +10,12 @@
     font-size: 12px;
     line-height: 140.62%;
     color: #0f0e08;
+    border-bottom: 1px solid transparent;
+    transition: border-color 0.3s;
+
+    &:hover {
+      border-color: #0f0e08;
+    }
   }
   @include onTablet {
     flex-direction: row;
