--- a/src/styles/blocks/special-event.scss
+++ b/src/styles/blocks/special-event.scss
@@ -4,6 +4,7 @@
     margin-left: -20px;
     width: 320px;
     height: 210px;
+    cursor: zoom-in;
     transition: transform 0.3s,
       box-shadow 0.3s,
       border-radius 0.3s;
