--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -73,8 +73,11 @@
     background-repeat: no-repeat;
     background-position: center;
     background-color: #f14a27;
+    transition: background-color 0.3s;
+    
     &:hover {
       background-color: #f1836d;
+      cursor: pointer;
     }
     @include onTablet {
       margin-left: 16px;
