--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -18,6 +18,7 @@
   &__picture {
     width: 100%;
     margin-bottom: 20px;
+    cursor: zoom-in;
     transition: transform 0.3s,
       box-shadow 0.3s,
       border-radius 0.3s;
