--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,23 +6,64 @@
 @import "typography";
 @import "blocks/grid";
 
-body {
+.page {
   background: $c-gray;
   color: $c-text;
+  scroll-behavior: smooth;
 
   a {
     color: $c-text;
   }
+
+  &__menu-on {
+    overflow: hidden;
+  }
+
+  &__title--h2 {
+    font-family: "Montserrat", sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 100%;
+    color: $c-text;
+    text-align: center;
+
+    @include onTablet {
+      text-align: left;
+      font-size: 48px;
+    }
+  }
+
+  &__title--h3 {
+    font-family: "Montserrat", sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 28px;
+    line-height: 100%;
+    color: $c-text;
+
+    @include onTablet {
+      font-size: 36px;
+    }
+  }
+
 }
 
-.body__menu-on {
-  overflow: hidden;
+.sqr {
+  width: 12px;
+  height: 12px;
+  background: #f14a27;
+  margin-left: 12px;
 }
 
 .container {
   max-width: 1280px;
   padding: 0 20px;
   margin: 0 auto;
+
+  &--pos {
+    position: relative;
+  }
 
   @include onTablet {
     padding: 0 34px;
@@ -31,6 +72,11 @@ body {
   @include onDesktop {
     padding: 0 55px;
   }
+}
+
+.container-outside {
+  max-width: 1920px;
+  margin: 0 auto;
 }
 
 .logo {
@@ -61,6 +107,8 @@ body {
 }
 
 .header {
+  position: relative;
+
   @include onTablet {
     height: 390px;
   }
@@ -157,6 +205,18 @@ body {
       font-size: 72px;
     }
   }
+
+  &--margin {
+    margin-bottom: 70px;
+
+    @include onTablet {
+      margin-bottom: 90px;
+    }
+
+    @include onDesktop {
+      margin-bottom: 200px;
+    }
+  }
 }
 
 .header-action {
@@ -202,6 +262,38 @@ body {
   }
 }
 
+.header-event-link {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+
+  display: none;
+  align-items: center;
+  gap: 20px;
+  max-width: max-content;
+
+  transform: rotateZ(-90deg);
+
+  &__line {
+    background: #687480;
+    height: 1px;
+    width: 70px;
+  }
+
+  &__text {
+    font-family: "IBM Plex Sans", sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 100%;
+    color: #687480;
+  }
+
+  @include onDesktop {
+    display: flex;
+  }
+}
+
 .nav-menu {
   position: fixed;
   top: 0;
@@ -214,7 +306,7 @@ body {
   box-shadow: 0 0 10px $c-text;
 
   transform: translate(-100%, -100%);
-  transition: transform 0.7s ease-in-out;
+  transition: transform 0.3s ease-in-out;
 
   &:target {
     transform: translate(0);
@@ -255,4 +347,159 @@ body {
       border-bottom: 2px solid $c-text;
     }
   }
+}
+
+.event {
+
+  &__title {
+    margin-bottom: 40px;
+
+    @include onTablet {
+      margin-bottom: 50px;
+    }
+  }
+}
+
+.event-exhibition {
+
+  &__poster {
+    width: 100%;
+    margin-bottom: 20px;
+
+    @include onTablet {
+      margin-bottom: 40px;
+    }
+
+    @include onDesktop {
+      margin-bottom: 0;
+    }
+  }
+
+  @include onDesktop {
+    align-items: center;
+  }
+
+  &--margin {
+    margin-bottom: 60px;
+
+    @include onDesktop {
+      margin-bottom: 100px;
+    }
+  }
+}
+
+.event-exhibition-description {
+  &__date {
+    //background: rgb(166, 128, 128);
+    width: 100%;
+    font-family: "IBM Plex Sans", sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 150%;
+    color: #687480;
+    display: flex;
+    justify-content: space-between;
+
+    margin-bottom: 10px;
+
+    @include onTablet {
+      margin-bottom: 30px;
+      gap: 30px;
+      max-width: max-content;
+      font-size: 14px;
+    }
+
+    &--lecture {
+      margin: 0;
+      padding: 0 20px;
+      gap: 10px;
+
+      @include onTablet {
+        gap: 50px;
+        padding: 0;
+      }
+    }
+
+    &--bold {
+      font-weight: 700;
+    }
+  }
+
+  &__title {
+
+    margin-bottom: 10px;
+    display: flex;
+    align-items: center;
+
+    @include onTablet {
+      margin-bottom: 15px;
+    }
+
+    &--lecture {
+      margin: 0;
+      text-align: center;
+      max-width: 460px;
+
+      @include onTablet {
+        text-align: left;
+      }
+    }
+  }
+
+  &__content {
+    font-family: "IBM Plex Sans", sans-serif;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 150%;
+    color: #4e4e4e;
+  }
+}
+
+.lecture-exhibition {
+  position: relative;
+  width: 100%;
+  height: 390px;
+
+  &__img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    object-position: bottom;
+  }
+
+  &__description {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    background: $c-gray;
+    transform: translateY(-50%);
+    box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
+    padding: 20px 0;
+
+    @include onTablet {
+      gap: 16px;
+      padding: 45px 55px 50px;
+      margin: 0 -16%;
+      align-items: start;
+    }
+
+    @include onDesktop {
+      margin: 0;
+    }
+  }
+}
+
+footer {
+  height: 500px;
+
+  //@include onTablet {
+  //  background: #d52121;
+  //}
+  //
+  //@include onDesktop {
+  //  background: rgba(166, 128, 128, 0.73);
+  //}
 }
