structure fix, footer done

--- a/src/styles/bloks/container.scss
+++ b/src/styles/bloks/container.scss
@@ -1,14 +1,13 @@
 .container {
-  position: relative;
-  box-sizing: border-box;
-  max-width: 1280px;
+  max-width: 1170px;
+  padding: 0 20px;
   margin: 0 auto;
 
-  &--reverse {
-    @include onPhone {
-      display: flex;
-      flex-direction: column-reverse;
-      column-gap: 0;
-    }
+  @include onTablet {
+    padding: 0;
+  }
+
+  @include onDesktop {
+    padding: 0;
   }
 }
