--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,11 +1,13 @@
-@import "./reset.scss";
+@import "./normalize.scss";
 @import "./utils/_vars.scss";
-@import "./mixins.scss";
-@import "./bloks/grid.scss";
+@import "./utils/_extends.scss";
 
-@import "./bloks/icon.scss";
-@import "./bloks/page.scss";
+@import "./mixins.scss";
+
 @import "./bloks/header.scss";
+@import "./bloks/logo.scss";
+
+@import "./bloks/sign-up.scss";
 @import "./bloks/footer.scss";
 
 @import "./bloks/ticket.scss";
