--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -358,6 +358,18 @@
       margin-bottom: 50px;
     }
   }
+
+  &--margin {
+    margin-bottom: 180px;
+
+    @include onTablet {
+      margin-bottom: 210px;
+    }
+
+    @include onDesktop {
+      margin-bottom: 300px;
+    }
+  }
 }
 
 .event-exhibition {
@@ -489,6 +501,99 @@
     @include onDesktop {
       margin: 0;
     }
+  }
+}
+
+.subscribe-bg {
+  width: 100%;
+  height: 380px;
+  background: $c-text url("../images/subscribe.png") top center/cover;
+  padding: 80px 0;
+
+  @include onTablet {
+    background-image: url("../images/subscribedesk.png");
+  }
+
+  @include onDesktop {
+    height: 550px;
+    padding: 160px 0;
+  }
+}
+
+.subscribe {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 50px;
+
+  &__title {
+    color: #fff;
+    text-align: center;
+    margin: 0 auto 20px;
+  }
+
+  &__content {
+    font-family: "IBM Plex Sans", sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 100%;
+    color: #fff;
+    text-align: center;
+  }
+
+  &__form {
+    display: flex;
+    width: 100%;
+
+    @include onTablet {
+      gap: 16px;
+    }
+
+    @include  onDesktop {
+      gap: 30px;
+    }
+  }
+
+  &__input {
+    width: 100%;
+
+    font-family: "Montserrat", sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 100%;
+    color: #687480;
+    padding: 0 24px;
+
+    @include onDesktop {
+      padding: 0 32px;
+    }
+  }
+
+  &__button {
+    flex-shrink: 0;
+    width: 50px;
+    height: 50px;
+    background: #f14a27;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    @include onTablet {
+      width: 70px;
+      height: 70px;
+    }
+  }
+
+  &__arrow {
+    width: 12px;
+    height: 12px;
+    background: url("../images/arrow-b.svg") center/contain no-repeat;
+  }
+
+  @include onTablet {
+    gap: 70px;
   }
 }
 
