--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -20,6 +20,7 @@
         margin-bottom: 0;
       }
     }
+
     &-text {
       width: max-content;
       margin-bottom: 11px;
@@ -39,8 +40,13 @@
       }
     }
   }
+
   &__logo {
     margin-bottom: 0;
+    transition: transform 0.3s;
+    &:hover {
+      transform: scale(1.05);
+    }
 
     @include onTablet {
       margin-bottom: 62px;
@@ -55,11 +61,19 @@
       width: 12px;
       height: 24px;
       margin-right: 28px;
+      transition: transform 0.3s;
+      &:hover {
+        transform: scale(1.05);
+      }
     }
     &-instagram {
       width: 24px;
       height: 24px;
       margin-right: 0;
+      transition: transform 0.3s;
+      &:hover {
+        transform: scale(1.05);
+      }
     }
   }
   &__title {
@@ -74,8 +88,8 @@
     &:hover {
       border-color: #0f0e08;
     }
-
   }
+
   &__text {
     font-size: 14px;
     line-height: 150%;
@@ -87,10 +101,12 @@
     @include onTablet {
       min-width: 210px;
     }
+
     @include onDesktop {
       width: 170px;
     }
   }
+
   &__text-hover {
     border-bottom: 1px solid transparent;
     transition: border-color 0.3s;
@@ -99,6 +115,7 @@
       border-color: #0f0e08;
     }
   }
+
   &__text-second {
     width: 130px;
     font-size: 14px;
@@ -128,6 +145,7 @@
       display: none;
     }
   }
+
   &__block--line {
     width: 280px;
     height: 1px;
