--- a/src/styles/blocks/contacts.scss
+++ b/src/styles/blocks/contacts.scss
@@ -73,6 +73,14 @@
     }
   }
 
+  &__img {
+    transition: opacity var(--dflt-trnst-time);
+
+    &:hover {
+      opacity: 0.75;
+    }
+  }
+
   &__title {
     font-size: 30px;
     text-align: left;
