--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -39,6 +39,11 @@
     height: 100%;
     object-fit: cover;
     grid-area: gallery__img;
+    transition: transform var(--dflt-trnst-time);
+
+    &:hover {
+      transform: scale(1.05);
+    }
   }
 
   &__img--tab {
@@ -103,6 +108,12 @@
     border-radius: 50%;
     width: 9px;
     height: 9px;
+    cursor: pointer;
+    transition: background-color var(--dflt-trnst-time);
+
+    &:hover {
+      background-color: #1a5a4c;
+    }
 
     &--active {
       background-color: #1a5a4c;
