--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -8,11 +8,13 @@
   &__opener, &__x {
     width: $nav-opener-w;
     height: $nav-opener-h;
+    cursor: pointer;
   }
 
   &__x {
     opacity: 0;
     display: none;
+    margin-top: 3px;
   }
 
   &__menu {
@@ -40,6 +42,20 @@
       & ~ .nav > .nav__opener .nav__x {
         opacity: 1;
         display: block;
+      }
+
+      & ~ .tickets {
+        display: flex;
+
+        @include onTablet {
+          display: none;
+        }
+
+        @include onPC {
+          display: none;
+        }
+
+
       }
 
       @include onTablet {
