--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -33,6 +33,14 @@
     font-size: 18px;
     font-weight: 400;
     text-align: center;
+
+    @include onTablet {
+      line-height: 1;
+    }
+
+    @include onPC {
+      line-height: 1;
+    }
   }
 
   &__form {
@@ -77,6 +85,11 @@
     width: 50px;
     background-color: #f14a27;
     cursor: pointer;
+    transition: background-color var(--dflt-trnst-time);
+
+    &:hover {
+      background-color: #f25536;
+    }
 
     @include onTablet {
       height: 70px;
