--- a/src/styles/blocks/tickets.scss
+++ b/src/styles/blocks/tickets.scss
@@ -83,6 +83,11 @@
     justify-content: center;
     align-items: center;
     background-color: #1A5A4C;
+    transition: background-color var(--dflt-trnst-time);
+
+    &:hover {
+      background-color: #1e6757;
+    }
 
     @include onTablet {
       width: 70px;
@@ -91,5 +96,10 @@
     @include onPC {
       width: 70px;
     }
+  }
+
+  &__label {
+    height: 100%;
+    width: 100%;
   }
 }
