--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -6,10 +6,16 @@
 
   --margin-top-sections: 70px;
 
+  // --actual__title-margin: 10px 0;
+
+  --actual__title-margin-t: 10px;
+  --actual__title-margin-b: 10px;
+
   --h1-font-size: 30px;
   --h2-font-size: 45px;
   --h4-font-size: 28px;
-  --actual__title-margin: 10px 0;
+
+  --dflt-trnst-time: 300ms;
 
   @include onTablet {
     --padding-v: 15px;
@@ -17,11 +23,12 @@
 
     --margin-top-sections: 88px;
 
+    --actual__title-margin-t: 30px;
+    --actual__title-margin-b: 15px;
+
     --h1-font-size: 36px;
     --h2-font-size: 54px;
     --h4-font-size: 36px;
-    --actual__title-margin-t: 30px;
-    --actual__title-margin-b: 15px;
   }
 
   @include onPC {
@@ -30,17 +37,24 @@
 
     --margin-top-sections: 200px;
 
+    --actual__title-margin-t: 30px;
+    --actual__title-margin-b: 15px;
+
     --h1-font-size: 36px;
     --h2-font-size: 72px;
     --h4-font-size: 36px;
-    --actual__title-margin-t: 30px;
-    --actual__title-margin-b: 15px;
   }
 }
 
 a {
   text-decoration: none;
-  color: black;
+  color: #0F0E08;
+
+  transition: color var(--dflt-trnst-time);
+
+  &:hover {
+    color: #687480;
+  }
 }
 
 b {
