--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,17 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "variables";
+@import "mixins";
 
-body {
-  background: $c-gray;
+@import "blocks/container";
+@import "blocks/grid";
+@import "blocks/logo";
+@import "blocks/icon";
+@import "blocks/button";
+
+@import "blocks/page";
+@import "blocks/header";
+@import "blocks/menu";
+
+a {
+  margin: 0;
+  padding: 0;
 }
