--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -55,32 +55,16 @@ p {
 
 .p--menu {
   @extend %p--menu;
-}
+  transform: translateX(var(--padding-h));
+  margin-bottom: 25px;
 
-.p--menu2 {
-  @extend %p--menu;
-  transition:
-    transform 0.5s 50ms,
-    opacity 0.5s 50ms;
-}
+  @include onTablet {
 
-.p--menu3 {
-  @extend %p--menu;
-  transition:
-    transform 0.5s 100ms,
-    opacity 0.5s 100ms;
-}
+  }
 
-.p--menu4 {
-  @extend %p--menu;
-  transition:
-    transform 0.5s 100ms,
-    opacity 0.5s 100ms;
-}
+  @include onPC {
+    margin-bottom: 75px;
+  }
 
-.p--menu5 {
-  @extend %p--menu;
-  transition:
-    transform 0.5s 150ms,
-    opacity 0.5s 150ms;
+
 }
