--- a/src/styles/blocks/actual.scss
+++ b/src/styles/blocks/actual.scss
@@ -45,6 +45,11 @@
     width: 100%;
     margin-bottom: 20px;
     grid-area: actual__img;
+    transition: transform var(--dflt-trnst-time);
+
+    &:hover {
+      transform: scale(1.05);
+    }
 
     @include onTablet {
       margin-bottom: 40px;
