--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -1,4 +1,5 @@
 .nav {
+  z-index: 0;
   // padding: calc(var(--h1-font-size) * 0.5 + #{$nav-opener-h} * 0.5) var(--padding-h);
   padding: calc(var(--padding-v) + var(--h1-font-size) / 1.5) var(--padding-h);
   position: absolute;
@@ -18,19 +19,43 @@
   }
 
   &__menu {
+    z-index: -1;
     position: absolute;
     list-style: none;
     margin: 0;
     padding: 0;
-    top: 100px;
-    width: 280px;
+    padding-top: calc(var(--padding-v) * 6);
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 300px;
+    background-color: #fff;
+    transform: translateX(-100px);
+    opacity: 0;
+    transition: transform 0.5s, opacity 0.5s;
+    transform-origin: left;
+
+    @include onTablet {
+      // top: calc(var(--padding-v) * 4);
+      height: 384px;
+      width: 50vw;
+      // height: calc(384px - var(--padding-v) * 4);
+    }
+
+    @include onPC {
+      // top: calc(var(--padding-v) * 4);
+      width: 545px;
+      height: calc(655px - var(--padding-v) + 15px);
+    }
+
+
   }
 
   &__checkbox {
     display: none;
 
     &:checked {
-      & ~ .nav > .nav__menu > .nav__menu-item > li > p {
+      & ~ .nav > .nav__menu {
         opacity: 1;
         transform: scaleX(100%);
       }
@@ -42,32 +67,6 @@
       & ~ .nav > .nav__opener .nav__x {
         opacity: 1;
         display: block;
-      }
-
-      & ~ .tickets {
-        display: flex;
-
-        @include onTablet {
-          display: none;
-        }
-
-        @include onPC {
-          display: none;
-        }
-
-
-      }
-
-      @include onTablet {
-        & ~ .tickets {
-          opacity: 0;
-        }
-      }
-
-      @include onPC {
-        & ~ .tickets {
-          opacity: 0;
-        }
       }
     }
   }
