--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -1,6 +1,4 @@
 * {
-  scroll-behavior: smooth;
-
   box-sizing: border-box;
 
   --padding-v: 9px;
@@ -61,4 +59,9 @@ a {
 
 b {
   font-weight: 600;
+}
+
+html {
+  scroll-behavior: smooth;
+  overflow-x: hidden;
 }
