--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -1,6 +1,10 @@
-/*.swiper {
+.swiper {
   &-slide {
     margin: 20px;
-    width: 100%;
+    width: 100vw;
   }
-}*/
+
+  &-picture {
+    max-width: 100vw;
+  }
+}
