--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,27 @@
+@mixin onDeskTop {
+  @media (min-width: 1024px) {
+    @content;
+  }
+}
+
+@mixin onMobile {
+  @media (min-width: 350px) {
+    @content;
+  }
+}
+
+body {
+  overflow-x: hidden;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+@import "./blocks/page.scss";
+@import "./blocks/grid.scss";
 @import "utils";
 @import "typography";
-@import "./blocks/page.scss";
 @import "./blocks/header.scss";
 @import "./blocks/sections.scss";
 @import "./blocks/footer.scss";
