--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,27 +1,47 @@
 .header {
   box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  position: absolute;
+  /*background-image: url(../images/background.png);*/
+  top: 0;
+  left: 0;
+  right: 0;
+
+  &__background {
+    width: 100%;
+  }
 
   &__menu {
     display: flex;
-    justify-content: space-between;
-    height: 100vh;
-
-    background-image: url(../images/background.png);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-
+    align-items: center;
+    height: 90px;
+    position: relative;
     &-opener {
       height: 12px;
       width: 18px;
     }
-  }
 
+    &-logo {
+      position: absolute;
+      left: 0;
+      right: 0;
+      margin: auto;
+      width: 55px;
+    }
+  }
+}
+
+.hero {
+  &__background {
+    width: 100%;
+  }
   &__title {
     text-align: center;
     font-weight: 700;
     font-size: 45px;
     line-height: 45px;
+    padding-top: 206px;
   }
 
   &__button {
@@ -30,6 +50,7 @@
     height: 50px;
     justify-content: center;
     padding-bottom: 70px;
+    padding-top: 89px;
 
     &-item {
       width: 230px;
