--- a/src/styles/blocks/sections.scss
+++ b/src/styles/blocks/sections.scss
@@ -5,20 +5,22 @@
     font-weight: 700;
     font-size: 36px;
     line-height: 36px;
-
+    margin-top: 200px;
     padding-bottom: 40px;
   }
 
   &-painting {
-    width: 280px;
-    height: 210px;
+    width: 100%;
     margin: 0 auto;
+
+    @include onDeskTop {
+      margin-bottom: 104px;
+      margin-left: 55px;
+    }
   }
 
   &-description {
     display: inline-block;
-    margin-top: 20px;
-    margin-bottom: 10px;
     font-weight: 500;
     font-size: 16px;
     line-height: 16px;
@@ -28,8 +30,7 @@
 
   &-date {
     display: inline-block;
-    margin-top: 20px;
-    margin-bottom: 10px;
+    padding-left: 130px;
     font-weight: 700;
     font-size: 16px;
     line-height: 16px;
@@ -38,6 +39,7 @@
   }
 
   &-name {
+    width: 100%;
     font-weight: 400;
     font-size: 28px;
     line-height: 28px;
@@ -51,18 +53,37 @@
     margin-bottom: 60px;
   }
 
-  &-sunset {
+  &-lection {
+    background-image: url(../images/classicism.png);
     margin: 0;
     width: 100%;
-    height: 210px;
+    height: 550px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
   }
 
   &-announcement {
-    display: block;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    padding: 100px;
     margin: auto;
-    background-image: url(../images/white-background.png);
-    width: 280px;
-    height: 140px;
-    margin-bottom: 100px;
+    margin-top: 448px;
+    /*background-image: url(../images/white-background.png);
+    background-repeat: no-repeat;
+    background-size: cover;*/
+    max-width: 100%;
+
+    background-color: #fff;
+    margin-bottom: 200px;
   }
+}
+
+.container {
+  max-width: 1340px;
+  padding: 0 30px;
+  margin: 0 auto;
+  width: 100%;
 }
