--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -6,6 +6,19 @@
     margin: 0 auto;
     min-width: 320px;
     max-width: 1280px;
+
+    &--with-menu {
+      overflow: hidden;
+    }
+  }
+
+  &__menu {
+    margin: 0 auto;
+    position: fixed;
+    max-width: 1280px;
+    top: 0;
+    left: 0;
+    right: 0;
   }
 
   &__section-current-events {
