--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,6 +7,8 @@
 @import "blocks/page.scss";
 @import "blocks/container.scss";
 @import "blocks/header.scss";
+@import "blocks/menu.scss";
+@import "blocks/icon.scss";
 @import "blocks/logo.scss";
 @import "blocks/form.scss";
 @import "blocks/footer.scss";
