--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -597,14 +597,168 @@
   }
 }
 
-footer {
-  height: 500px;
+.footer {
+  display: flex;
+  flex-wrap: wrap;
+  padding-top: 50px;
+  padding-bottom: 80px;
 
-  //@include onTablet {
-  //  background: #d52121;
-  //}
-  //
-  //@include onDesktop {
-  //  background: rgba(166, 128, 128, 0.73);
-  //}
+  font-family: "IBM Plex Sans", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 150%;
+  color: $c-text;
+
+  &--bold-font {
+    font-weight: 600;
+  }
+
+  @include onTablet {
+    padding-bottom: 120px;
+    display: grid;
+  }
+
+  @include onDesktop {
+    padding-bottom: 90px;
+  }
+}
+
+.footer-link {
+  //background: rgb(33, 56, 108);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+
+  &__margin {
+    padding-bottom: 40px;
+  }
+
+  @include onTablet {
+    flex-direction: column;
+    height: max-content;
+    width: max-content;
+    gap: 62px;
+  }
+
+  &__logo {
+    max-width: max-content;
+    line-height: 100%;
+    align-self: start;
+  }
+
+  &__social {
+    display: flex;
+    justify-content: space-between;
+    width: 60px;
+  }
+
+  &__link {
+    width: 24px;
+    height: 24px;
+    display: block;
+    background: contain/cover no-repeat;
+
+    &--f {
+      background-image: url("../images/fblogo.svg");
+    }
+
+    &--i {
+      background-image: url("../images/instlogo.svg");
+    }
+  }
+}
+
+.footer-schedule {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  width: 50%;
+  padding: 0 10px 70px 0;
+
+  @include onTablet {
+    width: 100%;
+    padding: 0 0 40px;
+  }
+
+  @include onDesktop {
+    padding: 0;
+  }
+
+  &__li-wrap {
+    display: flex;
+    flex-direction: column;
+
+    @include onTablet {
+      display: block;
+    }
+  }
+}
+
+.footer-contact {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  width: 50%;
+  padding-left: 10px;
+
+  @include onTablet {
+    width: 100%;
+  }
+}
+
+.footer-nav {
+  display: flex;
+  width: 100%;
+  padding-top: 40px;
+  border: 1px solid transparent;
+  border-top-color: $c-text;
+
+  @include onTablet {
+    padding-top: 60px;
+  }
+
+  @include onDesktop {
+    padding: 0 0 0 16%;
+    border-top-color: transparent;
+    border-left-color: $c-text;
+    margin-left: -16%;
+  }
+
+  &__list {
+    width: 50%;
+
+    & > li {
+      padding-bottom: 20px;
+
+      &:nth-last-child(1) {
+        padding-bottom: 0;
+      }
+    }
+  }
+}
+
+.sub-footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  padding-bottom: 56px;
+
+  @include onTablet {
+    flex-direction: row;
+    justify-content: space-between;
+    padding-bottom: 36px;
+  }
+
+  &__p {
+    display: block;
+    font-family: "IBM Plex Sans", sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 140.62%;
+    color: $c-text;
+  }
 }
